# libarcsim

./: CMakeLists.txt  LICENSE
include/: bah.hpp  bhcollision.hpp  blockvectors.hpp  bvh.hpp  cloth.hpp  collision.hpp  collisionutil.hpp  conf.hpp  constraint.hpp  dde.hpp  dynamicremesh.hpp  geometry.hpp  handle.hpp  io.hpp  kdtree.hpp  localopt.hpp  log.hpp  magic.hpp  mergehelper.hpp  mergeimpacts.hpp  mesh.hpp  misc.hpp  morph.hpp  mot_parser.hpp  nearestplane.hpp  nearobs.hpp  obstacle.hpp  optimization.hpp  physics.hpp  plasticity.hpp  popfilter.hpp  proximity.hpp  remesh.hpp  separate.hpp  separateobs.hpp  simulation.hpp  sparse.hpp  sparse_solver.hpp  spline.hpp  strainlimiting.hpp  (+6 more)
src/: TAGS  auglag.cpp  bah.cpp  bhcollision.cpp  bvh.cpp  cloth.cpp  collision.cpp  collisionutil.cpp  conf.cpp  constraint.cpp  dde.cpp  dynamicremesh.cpp  geometry.cpp  handle.cpp  io.cpp  kdtree.cpp  lbfgs.cpp  localopt.cpp  log.cpp  lsnewton.cpp  magic.cpp  mergehelper.cpp  mergeimpacts.cpp  mesh.cpp  misc.cpp  morph.cpp  mot_parser.cpp  nearestplane.cpp  nearobs.cpp  nlcg.cpp  obstacle.cpp  physics.cpp  plasticity.cpp  popfilter.cpp  proximity.cpp  remesh.cpp  separate.cpp  separateobs.cpp  simulation.cpp  sparse_solver.cpp  (+9 more)
